--- a/index.html
+++ b/index.html
@@ -9,6 +9,27 @@
 </head>
 
 <body>
+    <h1>Cookie Clicker</h1>
+    <img src="img/cookie.png" id="cookie">
+    <p>Cookie : 
+        <span id="score">0 </span>
+    </p>
+
+    <div class="button">
+        <a id="x2">x2</a>
+        
+        <p> price : 
+            <span id="pricex2"></span>
+        </p>
+
+        <a id="x5">x5</a>
+
+        <p>
+            price : <span id="pricex5"></span>
+        </p>
+
+        <a id="auto">auto-clicker</a>
+    </div>
 
     <script src="script.js"></script>
 </body>
