--- a/index.html
+++ b/index.html
@@ -29,7 +29,10 @@
         </p>
 
         <a id="auto">auto-clicker</a>
+        <a id="bonus">Bonus <span id="bonustimer"></span></a>
     </div>
+
+    
 
     <script src="script.js"></script>
 </body>
