--- a/index.html
+++ b/index.html
@@ -4,35 +4,57 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cookie Clicker</title>
+    <title>Cookie <span class="blue">Clicker</span> </title>
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
+
     <h1>Cookie Clicker</h1>
-    <img src="img/cookie.png" id="cookie">
-    <p>Cookie : 
-        <span id="score">0 </span>
-    </p>
+    <div class="container">
 
-    <div class="button">
-        <a id="x2">x2</a>
-        
-        <p> price : 
-            <span id="pricex2"></span>
-        </p>
+        <div class="cookie">
+            <img src="img/cookie.png" id="cookie">
+            <div class="score">
+                <p>Score cookies :
+                    <span id="score">0 </span>
+                </p>
+                <p>Cookies per click :
+                    <span id="perclick">0</span>
+                </p>
+            </div>
+        </div>
+        <div class="right">
 
-        <a id="x5">x5</a>
+            <div class="button">
+                <a id="x2">x2</a>
 
-        <p>
-            price : <span id="pricex5"></span>
-        </p>
+                <p> price :
+                    <span id="pricex2"></span>
+                </p>
 
-        <a id="auto">auto-clicker</a>
-        <a id="bonus">Bonus <span id="bonustimer"></span></a>
+                <a id="x5">x5</a>
+
+                <p>
+                    price : <span id="pricex5"></span>
+                </p>
+
+                <a id="auto">auto-clicker</a>
+
+                <p>
+                    price : <span id="price-auto"></span>
+                </p>
+
+
+                <a id="bonus">Bonus <span id="bonustimer"></span></a>
+
+                <p>
+                    price : <span id="price-bonus"></span>
+                </p>
+            </div>
+        </div>
     </div>
 
-    
 
     <script src="script.js"></script>
 </body>
