--- a/index.html
+++ b/index.html
@@ -4,58 +4,34 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cookie <span class="blue">Clicker</span> </title>
+    <title>Cookie Clicker</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-
+    <audio controls src="sound/0407.mp3" type="audio/mpeg">
+    </audio>
     <h1>Cookie Clicker</h1>
-    <div class="container">
+    <img src="img/cookie.png" id="cookie">
+    <p>Cookie : 
+        <span id="score">0 </span>
+    </p>
 
-        <div class="cookie">
-            <img src="img/cookie.png" id="cookie">
-            <div class="score">
-                <p>Score cookies :
-                    <span id="score">0 </span>
-                </p>
-                <p>Cookies per click :
-                    <span id="perclick">0</span>
-                </p>
-            </div>
-        </div>
-        <div class="right">
+    <div class="button">
+        <a id="x2">x2</a>
+        
+        <p> price : 
+            <span id="pricex2"></span>
+        </p>
 
-            <div class="button">
-                <a id="x2">x2</a>
+        <a id="x5">x5</a>
 
-                <p> price :
-                    <span id="pricex2"></span>
-                </p>
+        <p>
+            price : <span id="pricex5"></span>
+        </p>
 
-                <a id="x5">x5</a>
-
-                <p>
-                    price : <span id="pricex5"></span>
-                </p>
-
-                <a id="auto">auto-clicker</a>
-
-                <p>
-                    price : <span id="price-auto"></span>
-                </p>
-
-
-                <a id="bonus">Bonus <span id="bonustimer"></span></a>
-
-                <p>
-                    price : <span id="price-bonus"></span>
-                </p>
-            </div>
-        </div>
+        <a id="auto">auto-clicker</a>
     </div>
-
-
     <script src="script.js"></script>
 </body>
 
