--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <audio controls src="sound/0407.mp3" type="audio/mpeg" id="audio">
+    <audio src="sound/0407.mp3" id="audio">
     </audio>
     <h1>Cookie Clicker</h1>
     <img src="img/cookie.png" id="cookie">
