--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
 
 <body>
 
+    <audio src="sound/0407.mp3" id="audio">
+    </audio>
+
     <h1>Cookie Clicker</h1>
     <div class="container">
 
