--- a/index.html
+++ b/index.html
@@ -30,30 +30,35 @@
         <div class="right">
 
             <div class="button">
-                <a id="x2">x2</a>
+                <div class="btn-container">
+                    <a id="x2">x2</a>
+                    <p> price :
+                        <span id="pricex2"></span>
+                    </p>
+                </div>
 
-                <p> price :
-                    <span id="pricex2"></span>
-                </p>
+                <div class="btn-container">
+                    <a id="x5">x5</a>
+                    <p>
+                        price : <span id="pricex5"></span>
+                    </p>
+                </div>
 
-                <a id="x5">x5</a>
+                <div class="btn-container">
+                    <a id="auto">auto-clicker</a>
+                    <p>
+                        price : <span id="price-auto"></span>
+                    </p>
+                </div>
 
-                <p>
-                    price : <span id="pricex5"></span>
-                </p>
+                <div class="btn-container">
+                    <a id="bonus">Bonus <span id="bonustimer"></span></a>
 
-                <a id="auto">auto-clicker</a>
+                    <p>
+                        price : <span id="price-bonus"></span>
+                    </p>
+                </div>
 
-                <p>
-                    price : <span id="price-auto"></span>
-                </p>
-
-
-                <a id="bonus">Bonus <span id="bonustimer"></span></a>
-
-                <p>
-                    price : <span id="price-bonus"></span>
-                </p>
             </div>
         </div>
     </div>
