--- a/index.html
+++ b/index.html
@@ -31,28 +31,28 @@
 
             <div class="button">
                 <div class="btn-container">
-                    <a id="x2">x2</a>
+                    <button id="x2">x2</button>
                     <p> price :
                         <span id="pricex2"></span>
                     </p>
                 </div>
 
                 <div class="btn-container">
-                    <a id="x5">x5</a>
+                    <button id="x5">x5</button>
                     <p>
                         price : <span id="pricex5"></span>
                     </p>
                 </div>
 
                 <div class="btn-container">
-                    <a id="auto">auto-clicker</a>
+                    <button id="auto">auto-clicker</button>
                     <p>
                         price : <span id="price-auto"></span>
                     </p>
                 </div>
 
                 <div class="btn-container">
-                    <a id="bonus">Bonus <span id="bonustimer"></span></a>
+                    <button id="bonus">Bonus <span id="bonustimer"></span></button>
 
                     <p>
                         price : <span id="price-bonus"></span>
